fix(home): make arrival list responsive The arrival list was overflowing on smaller screens.  This commit fixes this by setting `width: 100%` and `flex-shrink: 1` on the list.

--- a/public/css/home.module.css
+++ b/public/css/home.module.css
@@ -91,7 +91,8 @@ body {
 }
 
 .area-wrapper .area-arrival .arrival-list {
-  max-width: 900px;
+  width: 100%;
+  flex-shrink: 1;
   display: flex;
   gap: 48px;
   margin-block: 13px;
